[tool.poetry]
name = "dsr"
version = "0.1.0"
description = "Dryck and Stay Resident"
authors = ["John Leen <jleen@saturnvalley.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
