[tool.poetry]
name = "dsr"
version = "0.1.0"
description = ""
authors = ["John Leen <jleen@saturnvalley.org>"]

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^3.0.0"

[tool.poetry.scripts]
dsr = 'dsr:dsr'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
